feat✨(alert): implement alert rule management and log features